# xgc2-adapter-runtime-client-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
.xgc2/: product.yml
.xgc2/dependencies/: xgc2-protobuf.env
.xgc2/scripts/: build_deb.sh  check_cpp_quality.sh  check_package_compliance.sh  configure_xgc2_apt.sh  install_protobuf_dependency.sh  smoke_test_installed.sh  xgc2_artifact_manifest.py
cmake/: xgc2_adapter_link_clientConfig.cmake.in  xgc2_adapter_runtime_clientConfig.cmake.in
docs/: design.md
include/xgc2/adapter_link/: client.hpp  version.hpp
include/xgc2/adapter_runtime/: client.hpp  version.hpp
pkgconfig/: xgc2-adapter-link-client.pc.in  xgc2-adapter-runtime-client.pc.in
src/: bootstrap.cpp  client.cpp  client_impl.hpp  control.cpp  digest.cpp  dispatch.cpp  internal.hpp  queue.cpp  session.cpp  session_state.cpp  source_dispatch.cpp  spec.cpp  stream.cpp  work.cpp
test/: adapter_link_client_test.cpp  adapter_runtime_client_cancellation_test.cpp  adapter_runtime_client_handler_test.cpp  adapter_runtime_client_session_test.cpp  adapter_runtime_client_source_test.cpp  adapter_runtime_client_test_support.hpp
